--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0",
-    "webpack-merge": "^5.9.0"
+    "webpack-dev-server": "^4.15.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
